--- a/Bit manipulation/342. Power of 4.md
+++ b/Bit manipulation/342. Power of 4.md
@@ -23,4 +23,10 @@ class Solution:
             return False
 ```
 
-
+**bit manipulation**
+```
+class Solution:
+    def isPowerOfFour(self, num: int) -> bool:
+        return num > 0 and num&(num-1)==0 and (num&0x55555555) != 0 
+```
+0x55555555是去掉是2的倍数
