--- a/Bit manipulation/342. Power of 4.md
+++ b/Bit manipulation/342. Power of 4.md
@@ -24,7 +24,7 @@ class Solution:
 ```
 
 **bit manipulation**
-```
+```python
 class Solution:
     def isPowerOfFour(self, num: int) -> bool:
         return num > 0 and num&(num-1)==0 and (num&0x55555555) != 0 
