Update 342. Power of 4.md

--- a/Bit manipulation/342. Power of 4.md
+++ b/Bit manipulation/342. Power of 4.md
@@ -29,4 +29,11 @@ class Solution:
     def isPowerOfFour(self, num: int) -> bool:
         return num > 0 and num&(num-1)==0 and (num&0x55555555) != 0 
 ```
-0x55555555是去掉是2的倍数
+0x55555555原因:
+```
+  是           是          是       
+..64    32     16    8     4     2     1    
+
+0x55555555
+..1      0      1     0     1      0    1
+```
