Update 1. two sum.md

--- a/hash table/1. two sum.md
+++ b/hash table/1. two sum.md
@@ -23,10 +23,10 @@ class Solution:
  ```python
         buff_dict = {}
         for i in range(len(nums)):
-            if nums[i] in buff_dict:
-                return [buff_dict[nums[i]], i]
+            if nums[i] in buff_dict: # complement is found
+                return [buff_dict[nums[i]], i] # [ori position, complement position]
             else:
-                buff_dict[target - nums[i]] = i
+                buff_dict[target - nums[i]] = i  # complement 
 ```
 
 
