Update 136. Single Number.md

--- a/hash table/136. Single Number.md
+++ b/hash table/136. Single Number.md
@@ -1,3 +1,5 @@
+**136. Single Number**
+
 Given a non-empty array of integers, every element appears twice except for one. Find that single one.
 
 Note:
@@ -16,7 +18,7 @@ Input: [4,1,2,1,2]
 Output: 4
 ```
 
-我的解法:
+我的解法 用hashtable:
 ```python
 class Solution:
     def singleNumber(self, nums: List[int]) -> int:
@@ -26,12 +28,28 @@ class Solution:
                 store[i] = 2
             else:
                 store[i] = 1
-        for num, time in store.items():
+        for num, time in store.items(): #通过值来找到对应的键
             if time == 1:
                 return num
 ```
 
+用 Xor 神仙思路
+```python
+class Solution:
+    def singleNumber(self, nums: List[int]) -> int:
+        rslt = 0
+        for num in nums:
+            rslt ^= num
+        return rslt
+```
 
+Xor, 用reduce, reduce其实是haskell里面的foldl
+```python
+from functools import reduce
+class Solution:
+    def singleNumber(self, nums: List[int]) -> int:
+        return reduce(operator.xor, nums)
+```
 
 
 
