Update 136. Single Number.md

--- a/hash table/136. Single Number.md
+++ b/hash table/136. Single Number.md
@@ -45,7 +45,7 @@ class Solution:
 
 Xor, 用reduce, reduce其实是haskell里面的foldl
 ```python
-from functools import reduce
+from functools import reduce #reduce要import
 class Solution:
     def singleNumber(self, nums: List[int]) -> int:
         return reduce(operator.xor, nums)
