--- a/hash table/202.happy number.md
+++ b/hash table/202.happy number.md
@@ -22,7 +22,7 @@ class Solution:
     def isHappy(self, n: int) -> bool:
         store = set() 
         while n != 1:
-            n = sum([int(i)**2 for i in str(n)])
+            n = sum([int(i)**2 for i in str(n)]) #注意这里处理单个digit技巧可以学习下
             if n in store:
                 return False
             else:
