Update 21.merge 2 sorted list. 88. merge sorted array.md

--- a/linked list/21.merge 2 sorted list. 88. merge sorted array.md
+++ b/linked list/21.merge 2 sorted list. 88. merge sorted array.md
@@ -41,6 +41,7 @@ nums2 = [2,5,6],       n = 3
 
 Output: [1,2,2,3,5,6]
 ```
+思想和前面一个差不多,不过是从后往前面填
 ```python
 class Solution:
     def merge(self, nums1: List[int], m: int, nums2: List[int], n: int) -> None:
