Update 21.merge 2 sorted list. 88. merge sorted array.md

--- a/linked list/21.merge 2 sorted list. 88. merge sorted array.md
+++ b/linked list/21.merge 2 sorted list. 88. merge sorted array.md
@@ -58,7 +58,7 @@ class Solution:
                 l2 -= 1
             end -= 1
             print(l2)
-        if l1 < 0: # l2 remaining
+        if l1 < 0: # l2 remaining, 把剩下的L1全部填到L1前面
             nums1[:l2+1] = nums2[:l2+1]
 ```
 
