--- a/linked list/21.88.23.merge 2 sorted list. merge sorted array. merge k list.md
+++ b/linked list/21.88.23.merge 2 sorted list. merge sorted array. merge k list.md
@@ -62,4 +62,63 @@ class Solution:
             nums1[:l2+1] = nums2[:l2+1]
 ```
 
+**23. Merge k Sorted Lists**
+Merge k sorted linked lists and return it as one sorted list. Analyze and describe its complexity.
+```
+Example:
+
+Input:
+[
+  1->4->5,
+  1->3->4,
+  2->6
+]
+Output: 1->1->2->3->4->4->5->6
+```
+
+
+```python
+from queue import PriorityQueue
+
+class Solution(object):
+    def mergeKLists(self, lists: List[ListNode]) -> ListNode:
+        dummy = curr = ListNode(None)
+        q = PriorityQueue()
+        for idx, node in enumerate(lists):
+            print(idx)
+            if node: 
+                q.put((node.val,idx,node))
+        while not q.empty():
+            _,idx,curr.next = q.get()
+            curr=curr.next
+            if curr.next: 
+                q.put((curr.next.val, idx, curr.next))
+        return dummy.next
+```
+
+通过这个学习一下Enumerate()的用法:
+```python
+l1 = ["eat","sleep","repeat"] 
+obj1 = enumerate(l1)
+print(list(obj1))
+obj2 = enumerate(l1, 1) # 把start index改成1
+print(list(obj2))
+for ele in enumerate(l1): 
+    print(ele)
+for count,ele in enumerate(l1,1): 
+    print(count,ele)
+# output:
+# [(0, 'eat'), (1, 'sleep'), (2, 'repeat')]
+# [(1, 'eat'), (2, 'sleep'), (3, 'repeat')]
+# (0, 'eat')
+# (1, 'sleep')
+# (2, 'repeat')
+# 1 eat
+# 2 sleep
+# 3 repeat
+```
+
+
+
+
 
