--- a/linked list/21.88.23.merge 2 sorted list. merge sorted array. merge k list.md
+++ b/linked list/21.88.23.merge 2 sorted list. merge sorted array. merge k list.md
@@ -2,7 +2,6 @@
 Merge two sorted linked lists and return it as a new list. The new list should be made by splicing together the nodes of the first two lists.
 ```
 Example:
-
 Input: 1->2->4, 1->3->4
 Output: 1->1->2->3->4->4
 ```
@@ -27,18 +26,14 @@ class Solution:
 
 **88. Merge Sorted Array**
 Given two sorted integer arrays nums1 and nums2, merge nums2 into nums1 as one sorted array.
-
 Note:
-
 The number of elements initialized in nums1 and nums2 are m and n respectively.
 You may assume that nums1 has enough space (size that is greater or equal to m + n) to hold additional elements from nums2.
 ```
 Example:
-
 Input:
 nums1 = [1,2,3,0,0,0], m = 3
 nums2 = [2,5,6],       n = 3
-
 Output: [1,2,2,3,5,6]
 ```
 思想和前面一个差不多,不过是从后往前面填
@@ -66,7 +61,6 @@ class Solution:
 Merge k sorted linked lists and return it as one sorted list. Analyze and describe its complexity.
 ```
 Example:
-
 Input:
 [
   1->4->5,
@@ -75,7 +69,6 @@ Input:
 ]
 Output: 1->1->2->3->4->4->5->6
 ```
-
 
 ```python
 from queue import PriorityQueue
@@ -89,10 +82,10 @@ class Solution(object):
             if node: 
                 q.put((node.val,idx,node))
         while not q.empty():
-            _,idx,curr.next = q.get()
+            _,idx,curr.next = q.get() 
             curr=curr.next
             if curr.next: 
-                q.put((curr.next.val, idx, curr.next))
+                q.put((curr.next.val, idx, curr.next)) # 继续k个比较
         return dummy.next
 ```
 
@@ -117,7 +110,8 @@ for count,ele in enumerate(l1,1):
 # 2 sleep
 # 3 repeat
 ```
-
+学习一下priority queue:
+put()可以接受一个tuple, tuple第一个值被用来排序,小的值先出
 
 
 
