Update 21.88.23.merge 2 sorted list. merge sorted array. merge k list.md

--- a/linked list/21.88.23.merge 2 sorted list. merge sorted array. merge k list.md
+++ b/linked list/21.88.23.merge 2 sorted list. merge sorted array. merge k list.md
@@ -114,5 +114,5 @@ for count,ele in enumerate(l1,1):
 put()可以接受一个tuple, tuple第一个值被用来排序,小的值先出
 
 
-
+用idx因为要考虑tuple第一个数相等的情况, 见[tuple的比较顺序](https://stackoverflow.com/questions/40205223/priority-queue-with-tuples-and-dicts)
 
